# ewaste-passport

./: .editorconfig  .gitignore  README.md
backend/: pyproject.toml
backend/apps/devices/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/devices/migrations/: 0001_initial.py  0002_initial.py
backend/apps/manufacturers/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/manufacturers/migrations/: 0001_initial.py  0002_initial.py
backend/apps/recyclers/: apps.py  models.py
backend/apps/recyclers/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: apps.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
docs/: API.md  ARCHITECTURE.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/api/: main.js
